--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@ elements on web pages and that's really pretty fun.</p>
 <h2 id="ch1-03">1.03. Introduction to jQuery Plugins (3:49)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 05. intro to jquery plugins (09) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="displayed border"
+<img class="displayed"
   src="./images/image005.png" 
   alt="1.03. Intro to jQuery Plugins."
   style="width:40%;" />
@@ -754,10 +754,10 @@ elements on web pages and that's really pretty fun.</p>
 <p>Just as a quick recap, we've learned a lot of JavaScript so far.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 06. recap: javascript (10) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="displayed border"
+<img class="displayed"
   src="./images/image006.png" 
   alt="Recap: JavaScript."
-  style="width:40%;" />
+  style="width:50%;" />
 
 <p>We started with the JavaScript basics, which included working with
 variables, flow control structures like if statements and else
@@ -770,10 +770,10 @@ basics, you can do quite a lot, but it might take you a long time to
 write the scripts that you want to do for your web page.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 07. recap: jquery (10) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="displayed border"
+<img class="displayed"
   src="./images/image007.png" 
   alt="Recap: jQuery."
-  style="width:40%;" />
+  style="width:50%;" />
 
 <p>Then we had jQuery and your world became a little bit larger. With
 jQuery, we've learned that there are a lot of helper functions built
@@ -782,10 +782,10 @@ more compact, and a little bit easier. That helps and that makes things
 a little bit easier and a little bit better for all of us.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 08. introducing: plugins (11) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="displayed border"
+<img class="displayed"
   src="./images/image008.png" 
   alt="Introducing: Plugins."
-  style="width:40%;" />
+  style="width:50%;" />
 
 <p>Now we need to introduce plugins. We've already used the
 <b>easing</b> plugin, which is a very simple plugin that adds additional
@@ -808,7 +808,7 @@ through the use of a plugin, and that's really very powerful and really
 great.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 09. adding functionality (12) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="displayed border"
+<img class="displayed"
   src="./images/image009.png" 
   alt="Adding Functionality."
   style="width:50%;" />
@@ -830,7 +830,7 @@ could do that thing.</p>
 <h2 id="ch1-04">1.04. Using Plugins and Essential Steps (4:22)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~ 10. using plugins and essential steps (1.04) (13) ~~~~~~~~~~~~~~~~~~~~~-->
-<img class="displayed border"
+<img class="displayed"
   src="./images/image010.png"
   alt="1.04. Using Plugins and Essential Steps."
   style="width:40%;" />
@@ -843,7 +843,7 @@ whole script yourself.</p>
 them to work.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~ 11. using plugins and essential steps, #2 (13) ~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="displayed border"
+<img class="displayed"
   src="./images/image011.png" 
   alt="Using Plugins and Essential Steps, #2."
   style="width:50%;" />
@@ -889,7 +889,7 @@ own script. And then also make sure that if there's any CSS files, those
 are included as well.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 12. documentation mish-mash (15) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="displayed border"
+<img class="displayed"
   src="./images/image012.png"
   alt="Documentation Mish-Mash."
   style="width:50%;" />
@@ -916,13 +916,13 @@ each time.</p>
 <h2 id="ch1-05">1.05. Gotchas and Rookie Mistakes (8:52)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~ 13. gotchas and rookie mistakes (1.05) (16) ~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="displayed border"
+<img class="displayed"
   src="./images/image013.png"
-  alt="Gotchas and Rookie Mistakes."
+  alt="1.05. Gotchas and Rookie Mistakes."
   style="width:40%;" />
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 14. gotchas and rookie mistakes, #2 (16) ~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="displayed border"
+<img class="displayed"
   src="./images/image014.png"
   alt="Gotchas and Rookie Mistakes, #2."
   style="width:50%;" />
@@ -1013,7 +1013,7 @@ that and you'll have to do it again. You want to make sure you put it on
 your CSS file.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~ 15. 5 items of beware the plugin (18) ~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="border displayed"
+<img class="displayed"
   src="./images/image015.png"
   alt="5 Items of Beware the Plugins."
   style="width:50%" >
@@ -1043,7 +1043,7 @@ extensive plugin. It's worth it to make sure that the plugin you're
 using is really worthwhile.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 16. looking to the future (19) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="border displayed"
+<img class="displayed"
   src="./images/image016.png"
   alt="Looking to the Future."
   style="width:50%" >
@@ -1097,7 +1097,7 @@ carrying the extension .ZIP.</p>
 <h2 id="ch1-06">1.06. FlexSlider: A jQuery Plugin (6:38)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~ 17. flexslider: a jquery plugin (21) ~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="border displayed"
+<img class="displayed"
   src="./images/image017.png"
   alt="1.06. FlexSlider: A jQuery Plugin."
   style="width:40%" >
@@ -1107,7 +1107,7 @@ one that we can use to add a significant amount of interface options to
 our page.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 18. basic flexslider (21) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="border displayed"
+<img class="displayed"
   src="./images/image018.png"
   alt="Basic FlexSlider."
   style="width:50%" >
@@ -1121,13 +1121,15 @@ the previous lessons. That's fun.</p>
 because it's a responsive slider.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 19/20. responsive kittens for sale (22) ~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="displayed border"
-  src="./images/image019.png" 
-  alt="Responsive Kittens for Sale Web Page, #1."
-  style="width:40%;" />
-<img src="./images/image020.png" 
-  alt="Responsive Kittens for Sale Web Page, #2."
-  style="width:40%;" />
+<img class="border"
+  src="./images/image019.png"
+  style="width:45%; float: left; margin-left: 5%; margin-bottom: 1em;"
+  alt="Responsive Kittens for Sale Web Page, #1.">
+<img class="border"
+  src="./images/image020.png"
+  style="width:45%; float: left; margin-left: 5%; margin-bottom: 1em;"
+  alt="Responsive Kittens for Sale Web Page, #2.">
+<p style="clear: both;"></p>
 
 <p>I've opened up the page over here and you can see if I pull this off and
 resize it, the page is responsive and it squishes and stretches, and so,
@@ -1135,7 +1137,7 @@ we can actually create a slider that will work for different screen
 sizes using FlexSlider. That's fun.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 21. markup for web site (22) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="border displayed"
+<img class="displayed"
   src="./images/image021.png"
   alt="Markup for Kittens for Sale Web Page."
   style="width:50%" >
@@ -1145,14 +1147,15 @@ download the start files that come with this lesson, I have in here some
 basic markup.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 22/23. responsive kittens for sale (23) ~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p style="align:center" width="100%">
-<img src="./images/image022.png?raw=true"
-  style="width:45%"
+<img class="border"
+  src="./images/image022.png"
+  style="width:45%; float: left; margin-left: 5%; margin-bottom: 1em;"
   alt="Responsive Kittens for Sale Web Page, #1." />    
-<img src="./images/image023.png?raw=true"
-  style="width:45%"
+<img class="border"
+  src="./images/image023.png"
+  style="width:45%; float: left; margin-left: 5%; margin-bottom: 1em;"
   alt="Responsive Kittens for Sale Web Page, #2." />
-</p>
+<p style="clear: both;"></p>
 
 <p>This is where the actual slider will go, and then I've just got some
 columns and some articles, and then the styling is all in place on the
@@ -1163,7 +1166,7 @@ pretty basic, but there we have it. We'll make a slider about kittens
 because, who doesn't love kittens? Kittens are awesome.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 24. responsive media queries (23) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="border displayed"
+<img class="displayed"
   src="./images/image024.png"
   alt="Responsive Media Queries."
   style="width:50%" >
@@ -1174,7 +1177,7 @@ layout, and then once you get larger than that, it will give you a more
 of a layout on the page with the columns. Okay.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 25. flexslider website (24) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="border displayed"
+<img class="displayed"
   src="./images/image025.png"
   alt="FlexSlider Website."
   style="width:50%" >
@@ -1182,7 +1185,7 @@ of a layout on the page with the columns. Okay.</p>
 <p>Then the next thing is the FlexSlider Website and the FlexSlider Script.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 26. flexslider website, #2 (24) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="border displayed"
+<img class="displayed"
   src="./images/image026.png"
   alt="FlexSlider Website, #2."
   style="width:50%" >
@@ -1197,7 +1200,7 @@ this lesson, so, you don't have to go there and download them, they're
 also included with this lesson.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 27. flexslider website, #3 (25) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="border displayed"
+<img class="displayed"
   src="./images/image027.png"
   alt="FlexSlider Website, #3."
   style="width:50%" >
@@ -1206,7 +1209,7 @@ also included with this lesson.</p>
 downloading the FlexSlider files of this lesson.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 28. files needed: flexslider website (25) ~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="border displayed"
+<img class="displayed"
   src="./images/image028.png"
   alt="Files Needed for FlexSlider Website."
   style="width:50%" >
@@ -10191,11 +10194,10 @@ to clean up a little more, just this final cleanup stuff.</p>
 <h2 id="ch4-13">4.13 Final Clean-Up (8:08)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 676. final clean-up (4.13) (344) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p style="align:center">
-<img src="./images/image676.png"
-  style="width:40%;"
-  alt="4.13. Final Clean-Up." />
-</p>
+<img class="displayed"
+  src="./images/image676.png?raw=true"
+  alt="4.13. Final Clean-Up."
+  style="width:40%" />
 
 <p>Okay the game is working and that's great, and everything is working the
 way it should. So that's excellent. But there's one thing that I would
@@ -10208,11 +10210,10 @@ setup turn at this point, I could just roll the dice again. So what can
 we do about that?</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~ 677. replace setup turn with throw dice (343) ~~~~~~~~~~~~~~~~~~~~~~-->
-<p style="align:center">
-<img src="./images/image677.png"
-  style="width:40%;"
-  alt="Replace function setup turn with throw dice." />
-</p>
+<img class="displayed"
+  src="./images/image677.png?raw=true"
+  alt="Replace function setup turn with throw dice."
+  style="width:50%" />
 
 <p>What if down here, in here when we go to roll again instead of doing
 setup turn we just run this <b>function</b>. Throw the dice instead of
@@ -10223,14 +10224,15 @@ rolls again, and you can see that the score is getting added nicely.
 It's a bit smoother so that works great, okay?</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~ 678/679. find and cleanup where possible (343) ~~~~~~~~~~~~~~~~~~~~~~-->
-<p style="align:center">
-<img src="./images/image678.png"
-  style="width:45%;"
+<img class="border"
+  src="./images/image678.png"
+  style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
   alt="Using best practices, cleanup where possible." />
-<img src="./images/image679.png"
-  style="width:45%;"
+<img class="border"
+  src="./images/image679.png"
+  style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
   alt="Using best practices, cleanup where possible." />
-</p>
+<p style="clear: both;"></p>
 
 <p>A couple other things to clean up this thing here is really long, and
 you could turn it into a separate little helper function. I don't know
@@ -10243,14 +10245,15 @@ be this stuff just because it's kind of long. And then, really all we need to do
 run this function here, <b>showCurrentScore</b>.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~ 680/681. change to showcurrentscore (344) ~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p style="align:center">
-<img src="./images/image680.png"
-  style="width:45%;"
+<img class="border"
+  src="./images/image680.png"
+  style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
   alt="Change checkWinningCondition to showCurrentScore." />
-<img src="./images/image681.png"
-  style="width:45%;"
+<img class="border"
+  src="./images/image681.png"
+  style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
   alt="Change checkWinningCondition to showCurrentScore." />
-</p>
+<p style="clear: both;"></p>
 
 <p>Now, we don't need to run check winning condition up when you run snake
 eyes because you're not going to win there, but we need to run show
@@ -10263,11 +10266,11 @@ need to do this bottom part which is showing the current score.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~ 682/683. best practices throw dice function (344) ~~~~~~~~~~~~~~~~~~~~-->
 <img class="border"
   src="./images/image682.png"
-  style="width:40%; float: left; margin-left: 5%; margin-bottom: 1em;"
+  style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
   alt="Optimize JavaScript functions using best practices." />
 <img class="border"
   src="./images/image683.png"
-  style="width:40%; float: left; margin-left: 5%; margin-bottom: 1em;"
+  style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
   alt="If function is used more than once, split off." />
 <p style="clear: both;"></p>
 
@@ -10292,11 +10295,11 @@ into a separate function that runs here.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 684/685. script.js with all functions (345) ~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="border"
   src="./images/image684.png"
-  style="width:40%; float: left; margin-left: 5%; margin-bottom: 1em;"
+  style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
   alt="Separate JS code into script.js for best practices." />
 <img class="border"
   src="./images/image685.png"
-  style="width:40%; float: left; margin-left: 5%; margin-bottom: 1em;"
+  style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
   alt="Move all functions into one script file for ease." />
 <p style="clear: both;"></p>
 
@@ -10501,11 +10504,11 @@ you'll get more practice. So I look forward to seeing you there.</p>
 <!--
 <img class="border"
   src="./images/imageXXX.png"
-  style="width:40%; float: left; margin-left: 5%; margin-bottom: 1em;"
+  style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
   alt="." />
 <img class="border"
   src="./images/imageXXX.png"
-  style="width:40%; float: left; margin-left: 5%; margin-bottom: 1em;"
+  style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
   alt="." />
 <p style="clear: both;"></p>
 
