--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/W04DM/pdf-of-presentation" 
-    target="_blank" rel="noreferrer noopener"><strong>1.04.jQueryPlugins.pdf (PDF File)</strong></a>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/Ulu2D/start-files-jquery-plugins-flexslider" 
-    target="_blank" rel="noopener noreferrer"><strong>1.04.FlexSliderBasic-START.zip (ZIP File)</strong></a></li>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/Ulu2D/start-files-jquery-plugins-flexslider"
-    target="_blank" rel="noopener noreferrer"><strong>1.04.FlexSliderPlugin.zip (ZIP File)</strong></a></li>
+  <li><p><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/W04DM/pdf-of-presentation" 
+    target="_blank" rel="noreferrer noopener"><strong>1.04.jQueryPlugins.pdf (PDF File)</strong></a></p></li>
+  <li><p><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/Ulu2D/start-files-jquery-plugins-flexslider" 
+    target="_blank" rel="noopener noreferrer"><strong>1.04.FlexSliderBasic-START.zip (ZIP File)</strong></a></p></li>
+  <li><p><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/Ulu2D/start-files-jquery-plugins-flexslider"
+    target="_blank" rel="noopener noreferrer"><strong>1.04.FlexSliderPlugin.zip (ZIP File)</strong></a></p></li>
 </ul>
 
 <blockquote>
