--- a/index.html
+++ b/index.html
@@ -4705,7 +4705,7 @@ down here with clean JavaScript window out of industry. Look. What are
 we going to put in there?</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 291.  (150) ~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p<img class="displayed"
+<img class="displayed"
   src="./images/image291.png?raw=true"
   alt="."
   style="width:50%" />
@@ -4813,7 +4813,7 @@ element on the page. In this case, the first element, the first section,
 we're getting here posts, zero.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 299.  (154) ~~~~~~~~~~~~~~~~~~~~~~~~-->
-<<img class="displayed"
+<img class="displayed"
   src="./images/image299.png?raw=true"
   alt="."
   style="width:50%" />
@@ -5077,23 +5077,15 @@ says okay.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 318/319. section identifier; 1 thru 5 (165) ~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="border"
-  src="./images/imageXXX.png"
+  src="./images/image318.png"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
   alt="." />
 <img class="border"
-  src="./images/imageXXX.png"
+  src="./images/image319.png"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
   alt="." />
 <p style="clear: both;"></p>
 
-<p style="align:center">
-<img src="./images/image318.png"
-  style="width:45%;"
-  alt="Identify section, scroll down." />
-<img src="./images/image319.png"
-  style="width:45%;"
-  alt="Idnetify section, scroll back up." />
-</p>
 <p>We must be looking in section two, and this will get to 250, we've got three, four, five, 
 and then when we go up, we get four, three, two, one. That's working great, so I can tell 
 this thing is firing, not I'm not getting calls for every single little imaging that I 
@@ -7001,7 +6993,7 @@ going to look at the next one in the next lesson.</p>
 <h2 id="ch2-38">2.38. Media Query for 1200 Pixels Wide</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~ 488. media query for 1200 pixels wide (2.38) (2xx) ~~~~~~~~~~~~~~~~~~~~-->
-<p <img class="displayed"
+<img class="displayed"
   src="./images/image488.png?raw=true"
   alt="2.38. Media Query for 1200 Pixels Wide."
   style="width:40%" />
@@ -7482,7 +7474,7 @@ look forward to doing it with you. Let's get started.</p>
 <p>Let's talk about a few of the familiar pieces we have with the JavaScript language.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~ 524. limits to variables in javascript (251) ~~~~~~~~~~~~~~~~~~~~~~~-->
-<<img class="displayed"
+<img class="displayed"
   src="./images/image524.png?raw=true"
   alt="No associative arrays in JS."
   style="width:50%" />
@@ -7643,7 +7635,7 @@ own key value pairs. And then we can access these different values
 through similar methods that we used before down here.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 532. inspect, log (257) ~~~~~~~~~~~~~~~~~~~~~~~-->
-<<img class="displayed"
+<img class="displayed"
   src="./images/image532.png?raw=true"
   alt="."
   style="width:50%" />
@@ -7925,7 +7917,7 @@ be able to do that.</p>
 <h2 id="ch3-06">3.06. Data Formats - XML (3:47)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~ 547. data formats - xml (3.06) (2xx) ~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<<img class="displayed"
+<img class="displayed"
   src="./images/image547.png?raw=true"
   alt="3.06. Data Formats - XML."
   style="width:40%" />
@@ -8072,7 +8064,7 @@ it and stick it into user. Now, it's an object that I can actually do
 some things with.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~ 558. example, accessing values (274) ~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<<img class="displayed"
+<img class="displayed"
   src="./images/image558.png?raw=true"
   alt="Example, Accessing Values."
   style="width:50%" />
@@ -8317,7 +8309,7 @@ I recommend that you do this a few times. Play the game, pick the player
 see what happens when you click the different buttons.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~ 570. inspect, JS buttons quit and roll (282) ~~~~~~~~~~~~~~~~~~~~~~~-->
-<<img class="displayed"
+<img class="displayed"
   src="./images/image570.png?raw=true"
   alt="Inspect JS buttons, quit and roll."
   style="width:50%" />
@@ -8703,7 +8695,7 @@ is going to be <b>document.getElementById</b> on it by the
 this whole div, the <b>gameControl</b> div. Then I have <b>game</b>,
 this is where the game is actually going to take place. If you go back
 to the previous lesson, and pull up the game and play it, and inspect
-it, you'll see that that's where the game takes place.</p>
+it, you'll see that that's where the game takes place.
 <b>score</b> which calls the element id ‘score’.</p>
 
 <p> Then I have <b>actionArea</b> which is get element by id of <b>actions</b>, and it
@@ -10227,28 +10219,3 @@ you'll get more practice. So I look forward to seeing you there.</p>
 
 </body>
 </html>
-<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<!--~~~~~~~~~~~~~~~~~~~~~~~~ ###.  (###) ~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<!--
-<img class="displayed"
-  src="./images/image###.png?raw=true"
-  alt="."
-  style="width:50%" />
-  
-<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ###-/###.  (###) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<!--
-<img class="border"
-  src="./images/imageXXX.png"
-  style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
-  alt="." />
-<img class="border"
-  src="./images/imageXXX.png"
-  style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
-  alt="." />
-<p style="clear: both;"></p>
-
-<div class="img-hover-zoom img-hover-zoom--quick-zoom">
-  <img src="./images/image###.png" 
-  alt=".">
-</div>
