--- a/index.html
+++ b/index.html
@@ -3052,7 +3052,7 @@ too many things at once.</p>
 <img class="displayed"
   src="./images/image175.png"
   alt="2.08. The Crux of the Problem."
-  style="width:50%;" />
+  style="width:40%;" />
 
 <p>Now, we're going to get to the crux of the problem. What we're going to
 do is we're going to look at a couple of variables and watch what
@@ -3439,7 +3439,7 @@ overload your CPU.</p>
 <img class="displayed"
   src="./images/image202.png"
   alt="2.11. Writing the Else/If Statement - Part 1."
-  style="width:50%;" />
+  style="width:40%;" />
 
 <p>Now we'll handle the ‘else if’ and we'll take care of what happens if
 we're scrolling up the page.</p>
@@ -4484,20 +4484,21 @@ spit out in the console. Well, we'll do that in the next lesson.</p>
   src="./images/image276.png"
   alt="2.20. Getting the Target -- Part 2."
   style="width:40%;" />
+  <br><br>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<!--~~~~~~~~~~~~~~~~~~~~~~~~ 277.  (143) ~~~~~~~~~~~~~~~~~~~~~~~~-->
+<!--~~~~~~~~~~~~~~~ 277. generate top of section in pixel for image height (143) ~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image277.png"
-  alt="."
+  alt="Generate the top of each section in pixels."
   style="width:50%;" />
 
 <p>This statement is generating the tops of each section when I click on
-them, so I want sign that to variable.</p>
+them, so I want assign that to variable.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<!--~~~~~~~~~~~~~~~~~~~~~~~~ 278.  (143) ~~~~~~~~~~~~~~~~~~~~~~~~-->
+<!--~~~~~~~~~~~~~~~~~~~~~~~~~ 278. calculate top of each section (143) ~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image278.png"
-  alt="."
+  alt="Calculate top pixels in each section."
   style="width:50%;" />
 
 <p>So instead of console.log here, I'm going to take that out, check out
@@ -4513,10 +4514,10 @@ our, when we see scroll, we want it to smooth scroll to this position,
 200 pixels down, not all the way up at the top of the window, because
 that wouldn't really help us.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<!--~~~~~~~~~~~~~~~~~~~~~~~~ 279.  (144) ~~~~~~~~~~~~~~~~~~~~~~~~-->
+<!--~~~~~~~~~~~~~~~~~~~~~~~~~~ 279. section height - 5 sections (144) ~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image279.png"
-  alt="."
+  alt="Section height - 5 sections."
   style="width:50%;" />
 
 <p>Now, that we have this variable value in this variable here, we can
@@ -4537,15 +4538,15 @@ just going to 'console.log', 'originalTop', just so you can see what's
 in that variable, each time we click, one of these links should be what
 we saw before.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<!--~~~~~~~~~~~~~~~~~~~~~~~~ 280/281.  (145) ~~~~~~~~~~~~~~~~~~~~~~~-->
+<!--~~~~~~~~~~~~~~~~~~~ 280/281. smooth scroller - height of sections (145) ~~~~~~~~~~~~~~~~~~~~-->
 <img class="border"
   src="./images/image280.png"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
-  alt="." />
+  alt="Smooth Scroller - calculate height of each section." />
 <img class="border"
   src="./images/image281.png"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
-  alt="." />
+  alt="Section height." />
 <p style="clear: both;"></p>
 
 <p>Let's go ahead and test this. If I refresh my page, starting up
