--- a/index.html
+++ b/index.html
@@ -7847,7 +7847,7 @@ you can start to think about ways in which you can use <b>objects</b>
 and <b>functions</b> together that are very powerful.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~ 544. putting objects and functions together (266) ~~~~~~~~~~~~~~~~~~~~-->
-<<img class="displayed"
+<img class="displayed"
   src="./images/image544.png?raw=true"
   alt="Example, Putting Objects and Functions Together."
   style="width:50%" />
@@ -7904,7 +7904,7 @@ so that when I run print message, it's going to actually print that
 message.</p>
 
 <p>Now if I do, <b>awesome2.printMessage</b>, I get <b>greetings</b>,
-however, again, if I do </b>awesome1.printMessage</b>, I still get
+however, again, if I do <b>awesome1.printMessage</b>, I still get
 hello. That's really interesting that I can actually use this pattern
 here to set different values and then access those values in different
 ways through different variables. It's a very powerful pattern and worth
