--- a/index.html
+++ b/index.html
@@ -337,7 +337,8 @@ series of challenges.</p>
 </ol>
 
 <ul>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/ClQ79/start-files-smooth-scroll-with-jquery" target="_blank" rel="noopener noreferrer">2.02.jQueryScrollEffects-START.zip (ZIP File)</a></li>
+  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/ClQ79/start-files-smooth-scroll-with-jquery" target="_blank" rel="noopener noreferrer">
+    2.02.jQueryScrollEffects-START.zip (ZIP File)</a></li>
 </ul>
 
 <ol start="3" type="1">
@@ -348,7 +349,8 @@ series of challenges.</p>
 </ol>
 
 <ul>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/eRvCI/pdf-of-presentation">PDF of Presentation: 2.06.jQuerySmoothScroll.pdf</a></li>
+  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/eRvCI/pdf-of-presentation">
+    PDF of Presentation: 2.06.jQuerySmoothScroll.pdf</a></li>
 </ul>
 
 <ol start="7" type="1">
@@ -708,7 +710,7 @@ could do that thing.</p>
 <!--~~~~~~~~~~~~~~~~~~~~ 10. using plugins and essential steps (1.04) (13) ~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image010.webp"
-  alt="1.04. Using Plugins and Essential Steps."
+  alt="1.04. Using Plugins and Essential Steps, #1."
   style="width:40%;" />
 
 <p>Using plugins and essential steps, adding plugins to your project,
@@ -794,7 +796,7 @@ each time.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~ 13. gotchas and rookie mistakes (1.05) (16) ~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image013.webp"
-  alt="1.05. Gotchas and Rookie Mistakes."
+  alt="1.05. Gotchas and Rookie Mistakes, #1."
   style="width:40%;" />
 <br><br>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
