--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/Hv9Tf/pdf-of-presentation">
+  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/Hv9Tf/pdf-of-presentation"
+    target="_blank" rel="noreferrer noopener">
     <strong>1.12 FlexSlider.pdf</strong></a></li>
 </ul>
 
@@ -127,7 +128,8 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/yRvxe/pdf-of-presentation">
+  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/yRvxe/pdf-of-presentation"
+    target="_blank" rel="noreferrer noopener">
     <strong>2.17 jQueryPageLocationTracking.pdf</strong></a></li>
 </ul>
 
@@ -154,7 +156,8 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/0lQmf/pdf-of-presentation">
+  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/0lQmf/pdf-of-presentation"
+    target="_blank" rel="noreferrer noopener">
     <strong>2.28 PDF-of-Presentation.pdf</strong></a></li>
 </ul>
 
@@ -351,7 +354,8 @@ series of challenges.</p>
 </ol>
 
 <ul>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/eRvCI/pdf-of-presentation">
+  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/eRvCI/pdf-of-presentation"
+    target="_blank" rel="noreferrer noopener">
     PDF of Presentation: 2.06 jQuerySmoothScroll.pdf</a></li>
 </ul>
 
@@ -3016,7 +3020,8 @@ section to another. We're going to deal with that in the next
 lesson.</p>
 
 <ul>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/eRvCI/pdf-of-presentation">
+  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/eRvCI/pdf-of-presentation"
+    target="_blank" rel="noreferrer noopener">
     PDF of Presentation: 2.06.jQuerySmoothScroll.pdf</a></li>
 </ul>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
@@ -4537,7 +4542,8 @@ interactions as you scroll down the page, all done in JQuery. We'll do
 the same script, and play JavaScript.</p>
 
 <ul>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/yRvxe/pdf-of-presentation">
+  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/yRvxe/pdf-of-presentation"
+    target="_blank" rel="noreferrer noopener">
     2.17 jQueryPage-Location-Tracking.pdf (28 pgs).</a></li>
 </ul>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
@@ -5850,7 +5856,8 @@ want to do your own thing, I think it's helped.</p>
 with it without even going to a library, like Animated On Scroll. But,
 that's up to you.</p>
 <ul>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/0lQmf/pdf-of-presentation">
+  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/0lQmf/pdf-of-presentation"
+    target="_blank" rel="noreferrer noopener">
     PDF of Presentation: 2.28 JavaScript-Scroll-Effect.pdf</a></li>
 </ul>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
@@ -10874,7 +10881,8 @@ the discussion board. I'll check in from time to time and see what
 excellent versions people have made of the big game.</p>
 
 <ul>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/QxK0k/pdf-of-presentation">
+  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/QxK0k/pdf-of-presentation"
+    target="_blank" rel="noreferrer noopener">
     4.14 Game-of-Pig.pdf</a>
   </li>
 </ul>
