--- a/2.18.Scroll-Effects/index.html
+++ b/2.18.Scroll-Effects/index.html
@@ -31,7 +31,7 @@
         to the 10th degree - deserves a slow painful death after everything is first taken from him.  
         His millions of stolen dollars, property, everything.  Fucking bastard must die..
         I want money for the bullshit lies and secrecy (repungnant) of VanDerAsshole - general 
-        F??khead in 1950's.
+        F??khead in the 1950's.
         Absolute f??k-face who thought he knew better than EVERY person on the planet. He had 
         no right whatsoever.
         </p>
@@ -48,7 +48,7 @@
         <p>
         EVERY one in the CIA/FBI/NSA who possess these lies yet doesn't announce them, is in turn
         a liar & thief & accomplice to murder.  Started a 'cold war' in order to cover their f??king 
-        lies.  I want them imprisoned. Every cowardly one on them!
+        lies.  I want them imprisoned. Every cowardly one of them!
         </p>
       </article>
       <article>
